# eddie-bot

./: .gitignore  docker-compose.yml  ideas.md  visualizer.php
analyzer/: Dockerfile  package-lock.json  package.json  tsconfig.json
analyzer/src/: index.ts  main.ts
analyzer/src/collectors/: DepthCollector.ts  IndicatorCollector.ts
analyzer/src/services/: MarketAnalyzer.ts  MarketCollector.ts  PriceVariationTracker.ts  PriceVariationTrackerBySeconds.ts  SupervisorService.ts  TradeService.ts  VolumeTracker.ts  index.ts
analyzer/src/types/: conditions.ts  market.ts
analyzer/src/utils/: condition_match.ts  ml-knn.ts  (+16 more)
bot-frontend/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  server-data.json
bot-frontend/app/: layout.tsx
bot-frontend/hooks/: useRedisSubscription.ts
bot-frontend/lib/: auth.ts  db.ts  redis-subscriber.ts  redis.ts
rust-analyzer/eddie/: Cargo.toml  README.md  config.toml  deploy.sh  eddie.conf  learn.md
rust-analyzer/eddie/src/: callbacks.rs  definitions.rs  indicators.rs  main.rs  ml_knn_wo_learning.rs  scalping_chatgpt.json  scalping_low_risk.json  scalping_robust_chatgpt.json  simple_trading.rs  strategy_builder.rs
rust-analyzer/eddie/src/bots/: definition.json
rust-analyzer/eddie/src/processors/: binance_hooks.rs  mod.rs
rust-analyzer/eddie/src/utils/: mod.rs  strategy_builder.rs  technical_indicators.rs
rust-analyzer/trader/: Cargo.toml  binance_buy_market.md  binance_modify_order.json
test-place/: index.js  lib-ml-knn.js  ml-knn.js  package-lock.json  package.json  tech-analysis.js  test-redis.js
(+36 files in other folders)
