[package]
name = "eddie"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "*"
redis = { version = "0.28.2", features = ["async-std-comp", "tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.7"
dotenv = "0.15.0"
futures-util = "0.3.31"
url = "2.5.4"
toml = "0.8.20"
binance = "0.21.0"
rust_ti = "1.3.4"